# jolteon-consensus

./: .gitignore  Cargo.toml  README.org  tasks.org
.github/workflows/: jolteon-consensus-linux-ci.yml
.nix/: flake.nix
src/consensus/: Cargo.toml
src/consensus/src/: aggregator.rs  consensus.rs  core.rs  error.rs  helper.rs  leader.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  synchronizer.rs  timer.rs  types.rs
src/consensus/src/tests/: common.rs  consensus_test.rs  consensus_tests.rs  core_tests.rs  synchronizer_tests.rs
src/crypto/: Cargo.toml
src/crypto/src/: lib.rs
src/crypto/src/tests/: crypto_tests.rs
src/mempool/: Cargo.toml
src/mempool/src/: batch_maker.rs  config.rs  helper.rs  mempool.rs  processor.rs  quorum_waiter.rs  synchronizer.rs
src/mempool/src/tests/: batch_maker_test.rs  common.rs  helper_tests.rs  processor_tests.rs  quorum_waiter_test.rs  synchronizer_tests.rs
src/network/: Cargo.toml
src/network/src/: lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
src/network/src/tests/: common.rs  receiver_tests.rs
src/node/: Cargo.toml
src/node/src/: config.rs  node.rs
src/store/: Cargo.toml
src/store/src/: lib.rs
src/store/src/tests/: store_test.rs
