[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "2.0.1"
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "time", "macros", "sync"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }

store = { path = "../store" }
crypto = { path = "../crypto" }
network = { path = "../network" }
mempool = { path = "../mempool" }
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.19.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
