[package]
name = "mempool"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto = { path = "../crypto" }
store = { path = "../store" }
network = { path = "../network" }

async-trait = "0.1.88"
futures = "0.3.31"
bincode = { version = "2.0.1", features = ["serde", "derive", "std"] }
log = "0.4.27"
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["sync", "rt", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
ed25519-dalek = "1.0.1"

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.19.1"
# rand = "0.9.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
