[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
logs = "0.7.1"
rand = { version = "0.9.1", features = ["small_rng"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
