[package]
name = "node"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
rand = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["time", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["codec"] }

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
serde_json = "1.0.140"
