[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
redb = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["sync", "macros", "rt"] }

[[bin]]
name = "testdb"
path = "bin/testdb.rs"
